# tag_detection

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/tag_detection/: Tag36h9.h  tag_detection.h  tag_family_lookup.h  timer.h  types.h
include/tag_detection/internal/: internal_types.h  line_points.h  quad_decoding.h  quad_detection.h  tag16h5.h  tag25h7.h  tag25h9.h  tag36h11.h  tag36h9.h  utils.h  visualizations.h
src/: example.cc  pipeline.cc  quad_decoding.cc  quad_detection.cc  tag_detection.cc  tag_family_lookup.cc  utils.cc  visualizations.cc
